# hush

./: Cargo.toml
generate-note-frequencies/: Cargo.toml
generate-note-frequencies/src/: main.rs
hush/src/: adsr.rs  envelope.rs  hertz.rs  instrument.rs  lib.rs  note.rs  notes.rs  oscillator.rs  sample.rs  time.rs
keyboard/: Cargo.toml
keyboard/src/: main.rs  streaming.rs
piano/: Cargo.toml
piano/src/: main.rs
src/: lib.rs  notes.rs
